plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.kymokim'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'


	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// AWS SDK 최신 버전 추가 (BOM 관리)
	implementation platform('software.amazon.awssdk:bom:2.20.81') // AWS SDK 2.x BOM 추가
	implementation 'software.amazon.awssdk:s3'

	implementation 'javax.servlet:javax.servlet-api:4.0.1'

	// Spring Security Core 의존성
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//jwt
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Actuator
//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
//	implementation 'io.micrometer:micrometer-registry-prometheus'

	// QueryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"


	//email
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.4'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	//database
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.0'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.3.0'

	//h2
	runtimeOnly 'com.h2database:h2'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Mockito Core 라이브러리
	testImplementation 'org.mockito:mockito-core:5.6.0'

}

clean {
	delete file('build/generated/sources/annotationProcessor')
}

tasks.named('test') {
	useJUnitPlatform()
}
